--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "antd": "^4.9.1",
     "axios": "^0.21.0",
     "craco-antd": "^1.19.0",
+    "flexcontainer-react": "^0.1.3",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
