--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.9.1",
     "axios": "^0.21.0",
     "craco-antd": "^1.19.0",
+    "craco-plugin-scoped-css": "^1.1.0",
     "flexcontainer-react": "^0.1.3",
     "moment": "^2.29.1",
     "react": "^17.0.1",
