--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "4.0.1",
     "three": "^0.123.0",
     "typescript": "^4.0.3",
+    "use-sound": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
